# Game

./: .gitignore  CMakeLists.txt  commands.txt
assets/Game/models/cylinder_black/temp/: cylinder_black.dae  cylinder_black1.dae  cylinder_black_smooth.dae
assets/Game/models/platform/: cylinder.zcm  cylinder_black_jpg.dae
assets/Game/models/sphere/: sphere.dae  sphere.zcm  sphere_ico1.dae  sphere_marble_jpg.dae  sphere_marble_png.dae  sphere_star.dae  start_new.dae
cmakeGitSubmodules/: CMakeLists.txt
src/: G_Camera.cpp  G_Camera.h  G_GameManager.cpp  G_GameManager.h  main.cpp
src/GUI/: G_GUI.cpp  G_GUI.h  G_GUI_Colors.cpp  G_GUI_Colors.h  G_GUI_W_MainMenu.cpp  G_GUI_W_MainMenu.h  G_GUI_W_Options.cpp  G_GUI_W_Options.h  G_GUI_W_PlayerWin.cpp  G_GUI_W_PlayerWin.h  G_GUI_W_RestartLevel.cpp  G_GUI_W_RestartLevel.h  G_WindowName.h
src/GUI/Buttons/: G_GUI_Button.cpp  G_GUI_Button.h  G_GUI_ButtonInt32Text.cpp  G_GUI_ButtonInt32Text.h  G_GUI_ButtonText.cpp  G_GUI_ButtonText.h  G_GUI_CheckBox.cpp  G_GUI_CheckBox.h
src/GUI/Config/: G_GUI_W_ConfigSaveLevel.cpp  G_GUI_W_ConfigSaveLevel.h
src/GUI/Text/: G_GUI_ButtonText.cpp  G_GUI_ButtonText.h  G_GUI_Fonts.cpp  G_GUI_Fonts.h  G_GUI_Text.cpp  G_GUI_Text.h  G_GUI_TextObjKeeper.h  G_LangText.cpp  G_LangText.h  G_Language.h  G_LanguageDependent.cpp  G_LanguageDependent.h  G_ZC_TextSceneTurnedToCameraLevel.cpp  G_ZC_TextSceneTurnedToCameraLevel.h
src/GamePlay/: G_Camera.cpp  G_Camera.h  G_GameManager.cpp  G_GameManager.h  G_Map.cpp  G_Map.h  G_Player.cpp  G_Player.h  G_Section.cpp  G_Section.h
src/GamePlay/GUI/: G_GUI_GM_LevelNumber.cpp  G_GUI_GM_LevelNumber.h  G_GUI_GM_StartTimer.cpp  G_GUI_GM_StartTimer.h  G_GUI_GM_W_LevelTimer.cpp  G_GUI_GM_W_LevelTimer.h  G_GUI_P_W_Health.cpp  G_GUI_P_W_Health.h
src/Map/: G_Map.cpp  G_Map.h  G_MapSphere.cpp  G_MapSphere.h  G_Section.cpp  G_Section.h
src/Model/: G_Assimp_ZC_Converter.cpp  G_Assimp_ZC_Converter.h  G_CubeMap.cpp  G_CubeMap.h  G_CubeModelCreator.cpp  G_CubeModelCreator.h  G_ModelLoader.cpp  G_ModelLoader.h  G_ModelName.h  G_ModelSet.cpp  G_ModelSet.h  G_Models.cpp  G_Models.h
src/Objects/: G_CylinderDMG.cpp  G_CylinderDMG.h  G_IObject.h  G_OP_MarbleSphere.cpp  G_OP_MarbleSphere.h  G_ObjPlayable.cpp  G_ObjPlayable.h  G_Object.cpp  G_Object.h  G_ObjectType.h  G_Platform.cpp  G_Platform.h  G_Player.cpp  G_Player.h  G_PushSet.cpp  G_PushSet.h  G_Star.cpp  G_Star.h
src/Objects/Particles/: G_PS_Star.cpp  G_PS_Star.h  G_PS_Wind.cpp  G_PS_Wind.h  G_Particle.h  G_ParticleMoveCircle.cpp  G_ParticleMoveCircle.h  G_ParticleMoveForward.h  G_ParticleSet.h  G_Particles.h  G_ParticlesDrawer.cpp  G_ParticlesDrawer.h
src/Objects/Particles/New/: G_PS_Setup.cpp  G_PS_Setup.h  G_PS_Source.cpp  G_PS_Source.h  G_ParticleSystem.cpp  G_ParticleSystem.h
src/Objects/Particles/Textured/: G_TParticle.cpp  G_TParticle.h
src/Sound/: G_GameSound.cpp  G_GameSound.h  G_GameSoundSet.cpp  G_GameSoundSet.h  G_GameSounds.cpp  G_GameSounds.h  G_Sound.cpp  G_Sound.h  G_SoundName.h  G_SoundsKeeper.cpp  G_SoundsKeeper.h  G_SystemSound.cpp  G_SystemSound.h
src/System/: G_Config.cpp  G_Config.h  G_DrawerCreator.cpp  G_DrawerCreator.h  G_FontData.cpp  G_FontData.h  G_Func.cpp  G_Func.h  G_LightSet.h  G_LightUBO.cpp  G_LightUBO.h  G_NewV.h  G_RenderLevel.h  G_ShPComputeName.h  G_SoundName.h  G_System.cpp  G_System.h  G_Time.cpp  G_Time.h  G_UpdaterLevels.h  G_Window.cpp  G_Window.h
